--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/redux-form": "^8.3.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "formik": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
